# csr-factory

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  ai-skills.yaml  pyproject.toml  requirements.txt
.agents/skills/code-coverage/: .ai-skills-managed  SKILL.md
.agents/skills/logging-principle/: .ai-skills-managed  SKILL.md
.agents/skills/work-in-git-tree/: .ai-skills-managed  SKILL.md
.agents/skills/workflow-unittest-testplan/: .ai-skills-managed  SKILL.md
.agents/skills/workflow-unittest-testplan/templates/: usecases_list.md
.github/workflows/: tests.yml
example/: create_csr.bash
example/servers/api1/: meta.yaml  server.cnf
example/servers/web1/: meta.yaml  server.cnf
example/servers/web2/: meta.yaml  server.cnf
scripts/: init.bash  skill-sync.bash
scripts/ai-skills/: init.bash  sync.bash
src/csr_factory/: __init__.py  cli.py  console.py  core.py  logging_config.py
tests/: __init__.py  test_cli.py  test_console.py  test_core.py
