[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csr-factory"
version = "0.2.0"
description = "Generate private keys and CSRs for servers from a directory of server configs."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "InsonusK"}
]
keywords = ["openssl", "csr", "pki", "certificate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
create-csr = "csr_factory.cli:main"

[project.urls]
Homepage = "https://github.com/InsonusK/csr-factory"
Repository = "https://github.com/InsonusK/csr-factory"
Issues = "https://github.com/InsonusK/csr-factory/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=csr_factory --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/csr_factory"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
